[gd_scene load_steps=15 format=4 uid="uid://djpod6lkb4twu"]

[ext_resource type="Script" uid="uid://dvlirvk5ena0d" path="res://objects/cores/core.gd" id="1_i5cd7"]
[ext_resource type="Material" uid="uid://bqmdw8m0wcmas" path="res://objects/materials/T_Trim_01.tres" id="2_nah87"]
[ext_resource type="Shader" uid="uid://cy6k1qq8nlhps" path="res://objects/materials/GrayDecalForRamp.gdshader" id="3_k5cr0"]
[ext_resource type="Texture2D" uid="uid://dbi31yl4yibyn" path="res://arts/3D/models/quaternius/Modular SciFi MegaKit[Standard]/Textures/T_Decals.png" id="4_jg3mo"]
[ext_resource type="AudioStream" uid="uid://dmehhiqfmdyv1" path="res://arts/audio/sounds/kenney_sci-fi-sounds/Audio/impactMetal_001.ogg" id="5_k5cr0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_it23r"]
resource_name = "M_LightFade_Red"
cull_mode = 2
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a6vbe"]
resource_name = "MI_Trim_01"
cull_mode = 2
metallic = 1.0
metallic_texture_channel = 2
roughness_texture_channel = 1
normal_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yx4l1"]
resource_name = "MI_Decal_Red"
cull_mode = 2
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_jjuvg"]
_surfaces = [{
"aabb": AABB(-0.264613, 0.105928, -0.26574, 0.532629, 0.325802, 0.455645),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAAAAIAAwAFAAEABAACAAYAAwAHAAUACAAEAAYABwAJAAUACAAGAAoABwALAAkACwAIAAoACwAKAAkA"),
"name": "M_LightFade_Red",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray("/bMAACjPAAD0If//UvUAALji/////wAAe0oAAITMAAByxAAA1a0AAAAA//9nvgAA/////7nEAAByOgAARq4AALyNAABYRAAACl7//wAAAAC0l///6gYAAFBvAAA7QwAA")
}, {
"aabb": AABB(-0.409309, -0.00408874, -0.417472, 0.818619, 0.149607, 0.726667),
"format": 34359742465,
"index_count": 522,
"index_data": PackedByteArray("PwAAAEAAAAAEAEAABAAAAAUAPwBAAEEABABBAEAAAAA/AAEAAAABAAIAPwBCAAEAAwACAAEAAgADAEMAAgBDAAYARAADAAEAQgBEAAEARQADAEQAQwADAEUAEQBEAEIARQBEABEARgBCAD8AEQBCAEYANgBFABEANwARAEYANgARADcANwBGADgARwBFADYAQwBFAEcARwA2ADUARwA1ADMAOABGAEgARgA/AEgAOABIADoAPwBBAEgAQQA6AEgAQQA8ADoAQQA+ADwAQQAMAD4APQA+AAwABAAMAEEAPQAMAEkASQAMAAQAOwA9AEkAOwBJAEoAOQA7AEoASQAEAEsASgBJAEsABAAHAEsABAAFAAcASgBLAEwASwAHAEwABQAIAAcATAAHAAgACAAFAAkATQBKAEwATQBMAAgAOQBKAE0ACAAJAE4ATgBNAAgACwBOAAkATwA5AE0ATgBPAE0ATwA0ADkATwAvADQATgBQAE8ATwBQAC8ACwAKAE4ATgAKAFAACgALAA0ALwBQABUAUAAKAFEAUQAKAA0AUABRABUALwAVAC4ADgANAAsAFQBRAFIAUgBRAA0ALgAVAFMAFQBSAFMALgBTAC0AVABSAA0AUwBSAFQADgBUAA0ALQBTAFUAUwBUAFUALQBVACsAVgArAFUAVABWAFUAVgAqACsAVAAOAFcAVABXAFYAVgApACoADgAPAFcADwBWAFcADwAOABAAVgAWACkADwAWAFYAKAApABYAKAAWAFgAWAAWAA8AJwAoAFgAJwBYAFkAJQAnAFkAWAAPAFoAWQBYAFoADwASAFoADwAQABIAWQBaAFsAWgASAFsAEAATABIAWwASABMAEwAQABQAXABZAFsAXABbABMAJQBZAFwAEwAUAF0AXQBcABMAGABdABQAXgAlAFwAXQBeAFwAXgAjACUAXgAhACMAXQBfAF4AXgBfACEAGAAXAF0AXQAXAF8AFwAYABkAIQBfAB0AXwAXAGAAYAAXABkAXwBgAB0AIQAdACIAGgAZABgAHQBgAGEAYQBgABkAIgAdAGIAHQBhAGIAIgBiACQAYwBhABkAYgBhAGMAGgBjABkAJABiAGQAYgBjAGQAJABkACYAZQAmAGQAYwBlAGQAZQAsACYAYwAaAGYAYwBmAGUAZQAwACwAGgAbAGYAGwBlAGYAGwAaABwAZQAgADAAGwAgAGUAMQAwACAAMQAgAGcAZwAgABsAMgAxAGcAMgBnAGgAMwAyAGgAZwAbAGkAaABnAGkAGwAeAGkAGwAcAB4AaABpAGoAaQAeAGoAMwBoAGsAawBoAGoARwAzAGsAQwBHAGsAHAAfAB4AagAeAB8AawBqAB8AQwBrAB8AHwAcAAYAHwAGAEMA"),
"lods": [0.0206432, PackedByteArray("AAABAAIAAwACAAEAAAAEAAEABAADAAEABAAAAAUAAgADAAYABAAFAAcABQAIAAcABAAHAAgACAAFAAkACAAJAAoACwAKAAkADAAEAAgACgAMAAgACgALAA0ADgANAAsADgAPAA0ADwAKAA0ADwAOABAAEQADAAQAEQAEAAwADwAQABIAEAATABIADwASABMAEwAQABQAFQAKAA8ACgAVAAwAFgAPABMADwAWABUAEwAUABcAFwAWABMAGAAXABQAFwAYABkAGgAZABgAGgAbABkAGwAXABkAGwAaABwAFwAdABYAHQAXABsAGwAcAB4AHAAfAB4AGwAeAB8AHwAcAAYAHwAGAAMAIAAbAB8AAwAgAB8AHQAbACAAAwARACAAIQAdACIAHQAhACMAIgAdACQAJAAdACAAHQAjACUAHQAlABYAJAAgACYAJQAnABYAJwAoABYAKAApABYAFgApACoAFgAqACsAIAAsACYAFgArABUALQAVACsALgAVAC0ALwAVAC4AIAAwACwAMQAwACAAMgAxACAAMwAyACAADAAVAC8AEQAzACAADAAvADQAEQA1ADMAEQA2ADUANgARADcANwARADgAOAARAAwADAA0ADkAOAAMADoAOQA7AAwADAA8ADoAOwA9AAwADAA+ADwAPQA+AAwA")],
"name": "MI_Trim_01",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 108,
"vertex_data": PackedByteArray("AAAAAKDw2D0plBq+ywY5PUeWBz65lFi+BUIMPaDw2D0plBq+ThSJPVuLFD5aVlS+uhlzvFuLFD4dNXa+BUIMvaDw2D0plBq+3xi3PaDw2D0VVWq9ywY5vUeWBz65lFi+ThSJvVuLFD5aVlS+rA68vaDw2D1mJlm9yihavluLFD4IPzs9v2YXvqDw2D3HsDs9nJ9avb8CFT5d3pq+Y7FSvkeWBz5Kdog9f94FvqDw2D0nlJo9A6BNvluLFD4NQwg+fazovaDw2D3qT9c9XJq8Pb8CFT5QFZK+sW8kvkeWBz6RWRQ+pJ4VvluLFD6WhiU+AACgsqDw2D1gJtk9UhaWvr8CFT7d1IA9kelwvr8CFT6zM0o+op4VPluLFD6YhiU+fKzoPaDw2D3tT9c9sG8kPkeWBz6UWRQ+f94FPqDw2D0qlJo9ntFcPluLFD4f5Ns9wGYXPqDw2D3OsDs9dd9NPr8CFT4xwGM+ZLFSPkeWBz5Pdog9yihaPluLFD4RPzs9vMiTPr8CFT4MEtc9kemHPtr6hbvQTp4+poqSPtn6hbstyZw+AACgsuD6hbtleJs+vrucPtb6hbsQf5c+kumHvtr6hbvOTp4+vcGjPtL6hbtM248+p4qSvtn6hbsryZw+wLucvtb6hbsOf5c+vsGjvtL6hbtK248+/hu5vtr6hbvtvlU+PnbOvtL6hbtHxws+/Ru5Ptr6hbvyvlU+/JDRvtb6hbuZ8u89Iw3Rvtn6hbs0EMI9CA7Nvtr6hbvRMpo9PXbOPtL6hbtMxws+/JDRPtb6hbui8u89Ig3RPtn6hbs9EMI9Bw7NPtr6hbvaMpo9J6SGvtD6hbtmeBu+tWaFPuD6hbsUxB++7EgKPtr6hbuE28S+8An6Pdn6hbs6Tc2+9lTTPdb6hbu2e9O+7EgKvtr6hbuE28S+AdKqPdL6hbvwvtW+8An6vdn6hbs6Tc2+AAAAANr6hbvwvtW+9lTTvdb6hbu2e9O+AdKqvdL6hbvwvtW+uhlzPFuLFD4dNXa+AAAAAFuLFD4dNXa+AAAAAL8CFT5d3pq+FqwOPVuLFD5xq3G+G+0MPluLFD67Lq69qMZcPVuLFD67RWW+NInXPb8CFT7/94m+sraVPb8CFT74RZi+04pEPluLFD4JZ+69nJ9aPb8CFT5d3pq+sraVvb8CFT74RZi+XJq8vb8CFT5QFZK+FqwOvVuLFD5xq3G+qMZcvVuLFD67RWW+K5XXvb8CFT4E8om+AWgPvluLFD5il6W9ygVHvluLFD7Cz+W9Km2Svr8CFT46jjI9GSdivluLFD5srIU9SiBjvluLFD4J5LM9NpaWvr8CFT4I5K49n9FcvluLFD4a5Ns9vMiTvr8CFT4GEtc9wh6Gvr8CFT5b3ho+0ThVvluLFD4aNfY9FVFivr8CFT7oGVk+d99Nvr8CFT4uwGM+RHU/vluLFD5puRc+b/UqvluLFD6CbyI+Ygg5vr8CFT6eS2c+AACgsluLFD5glyU+AACgsluLFD7Az2U+uhU5Pr8CFT5uTGc+bvUqPluLFD6EbyI+Q3U/PluLFD5suRc+FFFiPr8CFT7qGVk+AqBNPluLFD4PQwg+kOlwPr8CFT62M0o+wh6GPluLFD5e3ho+0DhVPluLFD4fNfY9NpaWPr8CFT4O5K49UhaWPr8CFT7k1IA9SSBjPluLFD4O5LM9GCdiPluLFD5yrIU9e2mSPr8CFT6kYTI9")
}, {
"aabb": AABB(-0.147853, 0.105928, -0.150956, 0.295706, 1e-05, 0.256986),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEAAAACAAQAAAAFAAMAAAAEAAYAAAAHAAUAAAAGAAgAAAAJAAcAAAAIAAoAAAALAAkAAAAKAAwAAAAMAAsA"),
"name": "MI_Decal_Red",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 13,
"vertex_data": PackedByteArray("/38AAAS1AACknQAAAAAAAGXNAABiXQAA/38AAAAAAAD//wAABcQAAFpiAAAAAAAALPEAAI/hAACBMAAAkGEAAFriAAAa/wAAAAAAAAXEAAD/fwAA//8AANIOAACP4QAApB0AABr/AAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ety4p"]
resource_name = "Prop_ItemHolder_Plane_144"
_surfaces = [{
"aabb": AABB(-0.264613, 0.105928, -0.26574, 0.532629, 0.325802, 0.455645),
"attribute_data": PackedByteArray("wY//////AAAHnAAA9Mf//z1w//831wAA92MAAAex//8KOP//xygAAAAAAAD3Tv//"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAAAAIAAwAFAAEABAACAAYAAwAHAAUACAAEAAYABwAJAAUACAAGAAoABwALAAkACwAIAAoACwAKAAkA"),
"material": SubResource("StandardMaterial3D_it23r"),
"name": "M_LightFade_Red",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray("/bMAACjPjgP0If//UvWpmrji//////kDe0oAAITMA5lyxAAA1a0GCgAA//9nvvO+/////7nEIQpyOgAARq71wLyNAABYRAXqCl7//wAAYe20l///6gZN7FBvAAA7Q1Pr7Q/X6idD9d3uD7vnTT4e3mIKQcNeXeXt2QrkxTheTe/NhCwY72js++mCFBZXaO76")
}, {
"aabb": AABB(-0.409309, -0.00408874, -0.417472, 0.818619, 0.149607, 0.726667),
"attribute_data": PackedByteArray("mFS6PhoOBT9SR8Y+zb0QP1JHxj4aDgU/is3MPlRTFj8KPtg+Gg4FP4rNzD5UUxY/UkfGPhoOBT9SR8Y+zb0QPyrZvT5UUxY/UkfGPoCUET9SR8Y+Gg4FP1JHxj7NvRA/UkfGPoCUET+Kzcw+VFMWPwo+2D4aDgU/is3MPlRTFj9SR8Y+Gg4FP1JHxj7NvRA/mFS6PhoOBT8q2b0+VFMWP1JHxj6AlBE/UkfGPhoOBT9SR8Y+zb0QP1JHxj6AlBE/is3MPlRTFj8KPtg+Gg4FP4rNzD5UUxY/UkfGPhoOBT9SR8Y+zb0QP5hUuj4aDgU/Ktm9PlRTFj9SR8Y+gJQRP1JHxj6AlBE/kgfcPez5rj4KEK09wFXKPtvi4z3AVco+2+LjPcBVyj7sE/E9aPHJPiAfAz5+BMo+Gu8KPsBVyj5Oe10+wFXKPuwT8T1o8ck+Gu8KPsBVyj7oWwU+AlquPuhbBT4CWq4+IB8DPn4Eyj7sE/E9aPHJPtvi4z3AVco+IB8DPn4Eyj4a7wo+wFXKPk57XT7AVco+Gu8KPsBVyj6SB9w97PmuPpIH3D3s+a4+ChCtPcBVyj4gHwM+fgTKPtvi4z3AVco+7BPxPWjxyT4gHwM+fgTKPhrvCj7AVco+7BPxPWjxyT7oWwU+AlquPtvi4z3AVco+ChCtPcBVyj7b4uM9wFXKPuwT8T1o8ck+TntdPsBVyj4gHwM+fgTKPhrvCj7AVco+AU4uPwC/jTs2uCo/wIlQPUfGNj/AiVA9RNQzPwCgazpE1DM/AKBrOja4Kj/AiVA9NrgqP8CJUD1HxjY/wIlQPTa4Kj/AiVA9AU4uPwC/jTsBTi4/AL+NOza4Kj/AiVA9R8Y2P8CJUD1E1DM/AKBrOja4Kj/AiVA9Ktm9PlRTFj+YVLo+VFMWP7qWwj5TUxY/UkfGPjPREz+qIt8+VFMWP7qWwj5TUxY/UkfGPjPREz+YVLo+VFMWPyrZvT5UUxY/upbCPlNTFj9SR8Y+M9ETP6oi3z5UUxY/upbCPlNTFj9SR8Y+M9ETP5hUuj5UUxY/Ktm9PlRTFj+6lsI+U1MWP1JHxj4z0RM/qiLfPlRTFj+6lsI+U1MWP1JHxj4z0RM/R8Y2P8CJUD07nDk/AKBrOkTUMz8AoGs65WkxPwBvkjs7nDk/wIlQPb+7Mj+wK189UustP4CbXj3laTE/AG+SO9GHKz8AoGs6v7syP7ArXz0BTi4/AL+NOxDxGz/AiVA9UustP4CbXj2euBo/AKBrOtGHKz8AoGs60YcrPwCgazoQ8Rs/wIlQPVLrLT+Am149nrgaPwCgazoBTi4/AL+NO9GHKz8AoGs6v7syP7ArXz3laTE/AG+SO1LrLT+Am149v7syP7ArXz07nDk/AKBrOuVpMT8Ab5I7O5w5P8CJUD1HxjY/wIlQPUfGNj/AiVA9RNQzPwCgazpE1DM/AKBrOjucOT8AoGs65WkxPwBvkjs7nDk/wIlQPb+7Mj+wK189UustP4CbXj3laTE/AG+SO9GHKz8AoGs6v7syP7ArXz0BTi4/AL+NOxDxGz/AiVA9UustP4CbXj2euBo/AKBrOtGHKz8AoGs6DBCtPez5rj6SB9w97PmuPu577T0aR64+7nvtPRpHrj5Gdg8+7PmuPgd8Uz7s+a4+6FsFPgJarj5Gdg8+7PmuPkZ2Dz7s+a4+B3xTPuz5rj7oWwU+AlquPu577T0aR64+RnYPPuz5rj7ue+09GkeuPgwQrT3s+a4+kgfcPez5rj6SB9w97PmuPgwQrT3s+a4+7nvtPRpHrj7ue+09GkeuPkZ2Dz7s+a4+B3xTPuz5rj7oWwU+AlquPkZ2Dz7s+a4+"),
"format": 34359742487,
"index_count": 522,
"index_data": PackedByteArray("VAAAAFUAAAAIAFUAAABUAAEAVABWAAEAVgBXAAEAVwAJAAEAAAABAAIAAwACAAEAAgADAFgAAgBYAAQABQAEAFgABQAGAAQACAAAAAoABgAFAAcAHgAGAAcAHgAHAFkAWQAHAFoAWgAHACAAHgAdAAYAHQAeAFsAXAAdAFsAHQBcABwAXABdABwAXQBeABwAXgAfABwAHQAcABsAGgAbABwAGwAaAF8AGwBfABkAGAAZAF8AGAAVABkAFQAYABYAEwAVABYAEwAWAGAAYAAWAGEAYQAWABcAEwASABUAEgATAGIAYwASAGIAEgBjABEAYwBkABEAZABlABEAZQAUABEAEgARABAADwAQABEAEAAPAGYAEABmAA4ADQAOAGYADQAKAA4ACgANAAsACAAKAAsACAALAGcAZwALAGgAaAALAAwAaQBqAGsAbABpAGsAaQBtAGoAbABuAGkARwBqAG0ARQBuAGwARwBJAGoARQBvAG4AcABJAEcAcQBvAEUAcABHAHIAcQBGAG8AcwBwAHIAdABGAHEAcwByAHUAdABxAHYAdwBzAHUAdAB2AHgAdwB1AEsAdAB4AEoAeQB3AEsAeAB6AEoAeQB7AHcAeAB8AHoAeQB9AHsAfAB+AHoAeQBNAH0AfAB/AH4AfQBNAIAAfwBMAH4AfQCAAE8AfwBIAEwATwCAAIEATABIAIIATwCBAIMATACCAIQAgwCBAIUAhgCEAIIAgwCFAIcAhgCCAIgAhQCJAIcAigCGAIgAhQCLAIkAigCMAIYAUQCJAIsATgCMAIoAUQBSAIkATgCNAIwAjgBSAFEAjwCNAE4AjgBRAJAAjwBQAI0AkQCOAJAAkgBQAI8AkQCQAJMAkgCPAJQAlQCRAJMAkgCUAJUAlQCTAFMAkgCVAFMAlgAjAJcAKQCXACMAlgAiACMAKQCYAJcAlgAkACIAMACYACkAlgAhACQAMAArAJgAJQAkACEAMQArADAAJQAhAJkAMQCaACsAJgAlAJkAmwCaADEAJgCZAJwAmwAxADIAJwAmAJwAmwAyADMAJwCcAJ0AmwAzAJ4AnwAnAJ0AMwCgAJ4AnwAoACcAMwA3AKAAnwAqACgANwChAKAAnwCiACoANwA8AKEAKgCiACwAPAA1AKEAKgAsAC0APAA+ADUALQAsAKMApAA1AD4ALQCjAC4ApAA+AD8ALgCjAKUApAA/AEAALgClAC8ApABAAKYApwAvAKUAQQCmAEAApwA2AC8AQQCoAKYApwA4ADYAQwCoAEEApwA0ADgAQwA9AKgAOQA4ADQARAA9AEMAOQA0AKkARACqAD0AOgA5AKkAqwCqAEQAOgCpAKwAqwBEAEIAOwA6AKwAqwBCADsAOwCsAK0AqwA7AK0A"),
"lods": [0.0206432, PackedByteArray("AAABAAIAAwACAAEAAgADAAQABQAEAAMABQAGAAQABgAFAAcAAAAIAAEACAAJAAEACAAAAAoACAAKAAsACAALAAwACgANAAsADQAKAA4ADQAOAA8AEAAPAA4ADwAQABEAEgARABAAEgATABEAEwAUABEAEwASABUAEwAVABYAEwAWABcAFQAYABYAGAAVABkAGAAZABoAGwAaABkAGgAbABwAHQAcABsAHQAeABwAHgAfABwAHgAdAAYAHgAGAAcAHgAHACAAIQAiACMAIQAkACIAJQAkACEAJgAlACEAJwAmACEAIQAoACcAKQAhACMAIQAqACgAKQArACEAIQAsACoAKgAsAC0ALQAsAC4ALgAsAC8AMAArACkAMQArADAAKwAxADIAKwAyADMANAAvACwAKwAzADUANAA2AC8AMwA3ADUANAA4ADYAOQA4ADQAOgA5ADQAOwA6ADQANwA8ADUAPQA7ADQAPAA+ADUANQA+AD8ANQA/AEAAQQA1AEAAQQA9ADUAPQBCADsAQwA9AEEAPQBEAEIARAA9AEMARQBGAEcARgBFAEgARQBHAEkARgBIAEoASQBHAEsASABMAEoATQBJAEsATgBMAEgATQBPAEkATgBQAEwATwBNAFEAUABOAFIAUQBSAE8AUABSAFMAUgBRAFMA")],
"material": SubResource("StandardMaterial3D_a6vbe"),
"name": "MI_Trim_01",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 174,
"vertex_data": PackedByteArray("AAAAAKDw2D0plBq+ywY5PUeWBz65lFi+BUIMPaDw2D0plBq+ThSJPVuLFD5aVlS+3xi3PaDw2D0VVWq9yihaPluLFD4RPzs9wGYXPqDw2D3OsDs9ZLFSPkeWBz5Pdog9uhlzvFuLFD4dNXa+ThSJPVuLFD5aVlS+BUIMvaDw2D0plBq+ywY5vUeWBz65lFi+ThSJvVuLFD5aVlS+ThSJvVuLFD5aVlS+rA68vaDw2D1mJlm9yihavluLFD4IPzs9v2YXvqDw2D3HsDs9Y7FSvkeWBz5Kdog9f94FvqDw2D0nlJo9A6BNvluLFD4NQwg+yihavluLFD4IPzs9fazovaDw2D3qT9c9sW8kvkeWBz6RWRQ+pJ4VvluLFD6WhiU+pJ4VvluLFD6WhiU+AACgsqDw2D1gJtk9op4VPluLFD6YhiU+fKzoPaDw2D3tT9c9sG8kPkeWBz6UWRQ+f94FPqDw2D0qlJo9ntFcPluLFD4f5Ns9op4VPluLFD6YhiU+yihaPluLFD4RPzs9nJ9avb8CFT5d3pq+AAAAANr6hbvwvtW+AdKqPdL6hbvwvtW+AdKqvdL6hbvwvtW+9lTTvdb6hbu2e9O+8An6vdn6hbs6Tc2+7EgKvtr6hbuE28S+J6SGvtD6hbtmeBu+9lTTPdb6hbu2e9O+CA7Nvtr6hbvRMpo9XJq8Pb8CFT5QFZK+UhaWvr8CFT7d1IA9Iw3Rvtn6hbs0EMI9/JDRvtb6hbuZ8u89PnbOvtL6hbtHxws+8An6Pdn6hbs6Tc2+7EgKPtr6hbuE28S+tWaFPuD6hbsUxB++Bw7NPtr6hbvaMpo9kelwvr8CFT6zM0o+vMiTPr8CFT4MEtc9/hu5vtr6hbvtvlU+Ig3RPtn6hbs9EMI9vsGjvtL6hbtK248+wLucvtb6hbsOf5c+p4qSvtn6hbsryZw+kumHvtr6hbvOTp4+/JDRPtb6hbui8u89dd9NPr8CFT4xwGM+PXbOPtL6hbtMxws+/Ru5Ptr6hbvyvlU+vcGjPtL6hbtM248+vrucPtb6hbsQf5c+AACgsuD6hbtleJs+poqSPtn6hbstyZw+kemHPtr6hbvQTp4+XJq8Pb8CFT5QFZK+ThSJPVuLFD5aVlS+uhlzvFuLFD4dNXa+vMiTPr8CFT4MEtc9nJ9avb8CFT5d3pq+yihaPluLFD4RPzs9ThSJvVuLFD5aVlS+ntFcPluLFD4f5Ns9yihavluLFD4IPzs9dd9NPr8CFT4xwGM+UhaWvr8CFT7d1IA9op4VPluLFD6YhiU+A6BNvluLFD4NQwg+kelwvr8CFT6zM0o+pJ4VvluLFD6WhiU+uhlzPFuLFD4dNXa+AAAAAFuLFD4dNXa+FqwOPVuLFD5xq3G+qMZcPVuLFD67RWW+G+0MPluLFD67Lq69SSBjPluLFD4O5LM9GCdiPluLFD5yrIU90DhVPluLFD4fNfY9AqBNPluLFD4PQwg+Q3U/PluLFD5suRc+bvUqPluLFD6EbyI+AACgsluLFD5glyU+RHU/vluLFD5puRc+b/UqvluLFD6CbyI+0ThVvluLFD4aNfY9n9FcvluLFD4a5Ns9SiBjvluLFD4J5LM9GSdivluLFD5srIU9AWgPvluLFD5il6W9FqwOvVuLFD5xq3G+qMZcvVuLFD67RWW+uhlzPFuLFD4dNXa+AAAAAL8CFT5d3pq+nJ9aPb8CFT5d3pq+sraVPb8CFT74RZi+AAAAAFuLFD4dNXa+FqwOPVuLFD5xq3G+qMZcPVuLFD67RWW+sraVvb8CFT74RZi+NInXPb8CFT7/94m+FqwOvVuLFD5xq3G+XJq8vb8CFT5QFZK+G+0MPluLFD67Lq69qMZcvVuLFD67RWW+04pEPluLFD4JZ+69K5XXvb8CFT4E8om+e2mSPr8CFT6kYTI9AWgPvluLFD5il6W9GCdiPluLFD5yrIU9ygVHvluLFD7Cz+W9UhaWPr8CFT7k1IA9Km2Svr8CFT46jjI9SSBjPluLFD4O5LM9NpaWPr8CFT4O5K49GSdivluLFD5srIU9SiBjvluLFD4J5LM9wh6GPluLFD5e3ho+NpaWvr8CFT4I5K490DhVPluLFD4fNfY9n9FcvluLFD4a5Ns9AqBNPluLFD4PQwg+vMiTvr8CFT4GEtc9kOlwPr8CFT62M0o+wh6Gvr8CFT5b3ho+FFFiPr8CFT7qGVk+0ThVvluLFD4aNfY9Q3U/PluLFD5suRc+bvUqPluLFD6EbyI+FVFivr8CFT7oGVk+uhU5Pr8CFT5uTGc+RHU/vluLFD5puRc+d99Nvr8CFT4uwGM+AACgsluLFD5glyU+b/UqvluLFD6CbyI+AACgsluLFD7Az2U+Ygg5vr8CFT6eS2c+AAAAAL8CFT5d3pq+nJ9aPb8CFT5d3pq+sraVPb8CFT74RZi+sraVvb8CFT74RZi+NInXPb8CFT7/94m+04pEPluLFD4JZ+69XJq8vb8CFT5QFZK+K5XXvb8CFT4E8om+e2mSPr8CFT6kYTI9ygVHvluLFD7Cz+W9UhaWPr8CFT7k1IA9NpaWPr8CFT4O5K49Km2Svr8CFT46jjI9NpaWvr8CFT4I5K49wh6GPluLFD5e3ho+vMiTvr8CFT4GEtc9kOlwPr8CFT62M0o+wh6Gvr8CFT5b3ho+FFFiPr8CFT7qGVk+FVFivr8CFT7oGVk+uhU5Pr8CFT5uTGc+AACgsluLFD7Az2U+d99Nvr8CFT4uwGM+Ygg5vr8CFT6eS2c+/3/b6QAA/7+waDjHF9IBO7VtQ9hmybY+Zlgxv32tkkGDZ1/ZDwCn6OFV8L8NA+qWsmJJ3VwDzvriUg7PRfQo+iSC/tUUBjPAZlgxv////z9JkkLYeDZRwU6XOMfnLf3El6cwv////z+XpzC/XVJ4vnuYX9nI/yMXHarvv9r8C2lKnUvduvxSBRytDs+5C9YFcJz27diu/r8Psq7h4LEnwB2q77////8/E6VH9qDVYcFYt1DuRcS4xNu3q/3///+/27er/d77173Cnv//n/8KwCNIq/1BBFBC61pH9iEqpz6mSFDuuTtGO45j9u39/5Lo0E5g36z/PeojSKv9////v+FV8L////8/QDV6+JoOXbteyP//AAD/v/7KrfeS8F1DADWt92wPobw3MJjoFCZfvT4rKNmLPtnBuSazyytPd8I8JNLFL/9wF8fPmOjq2Z9CEijMw+f6ihS/1R/WArpGPNEusL6k9xsO8TADvZr7zAqXPeS0ygXidtBHGLB6BSlswNQq2XTBJT5F2bPL0rCGPcHbz8XPAJHo7NfMwxYFdOvXUBquP69tvKu35q/3+IuUEUwWrtmu/78OzwS9YgQx9WJRG67msVy9elwfrgzDmb1Tag2ubd0Qwg95u63l8jLDZ8LktDT6HImUkgSu2x6mOx64G7Cb+tuT57Mgrv7/bJelriKuFk6WQoSjH67yPGVC/3/arOT+2MCtlQ2ulCLtPfKGu60cDcw8d3/a/gwAfh+Xfyv/IACkFhOAB//s/8q/Qn8x/4dS2L8ggAT/4v/Ivmx/Rf9NsA7AZ4Ar/97/WulTfwH/flHFv5KASP+yT+8/+H66/+//HTPJgA7/qGP4P0J/1P8S/ek/PYFC/w0AgZczgVL/FAAJmLyA1P/tAhXA2n3+1er5yz//fwzZAAD/v6px98Zt5Fw7WV+OutPP2CxeWH7BAwCV6DpJcdKA90LwG0tFwOPdB/IgUKbh/f9sl+9NruEeTtc/g0Oi48pIHzwPPoTv6lbCL6O0///u/wLAe7yi4zS338PvwYTvFKk80N6vpuHZrv+/LrFg31IAwRXEtnHSfgi8D+O0RcAbIvcNn6d9wcL/QhdUjvfGkRuixKWgjrorMCbT638H/xIANED/fxH/////v95/BP8cADZBq3/u/g8AVFD/fxH/////v7F/8f4VAIBNcH/X/hEAXR1TgO7+7/+qr31/BP8gAGwWTYDx/un/frKHgNr+8v9/4KR/b/9Dr/+/joDX/u3/oeKkf2//Ya//v4SAAf/f/5LpVn8e/7qwDsBagG//uVD/PzV/B/+yoQnAWoBv/5lQ/z81fw7/VZwGwKiAHv9DT/A/FX8y/9pk9L8bfzL/+2r3v8mAB/9MXvU/6YAy/ySbCkC3f9H/JVH/v+OAMv8DlQdAt3/R/yVR/78tgTL/pq4GQDJ/7v+N/5BoHYEy/4utCkAFf7D/sP//Z0eBL/8AAGyX3n6D//P/1l1HgS//AABsl95+gP/s/w5g+37B/+n/GjYggYP/CwAooih/1/9O/Oo/IIGA/xIA8J8Ggbr/DwDizGiA///KAP+/A4HB/xUA5MlogP//BQH/v9aA1/+xAxTAXsj//wAA/7++ynr4ZPGhRBjQmudU2IRD5i+a56onerxB2vLIKK6qPcHbz8WRAJLoPyod1vxFt8O9JfTI01FUwpnZ9sS1BPTpPCTSxW7/bxcu0bG+WAji8TrDR7U1+MuIZCb3xEn7CxbEPEe1yQczd+ezIK6h/77oQ0jhr04Hc2stryKujFBuQxFMFq7Zrv+/tKIgrp49OkNKXSCuYMLEvJuDka0eCOE8/3/arDr/lsBsbQWuJuFXxGZ8ka3l9xvD")
}, {
"aabb": AABB(-0.147853, 0.105928, -0.150956, 0.295706, 1e-05, 0.256986),
"attribute_data": PackedByteArray("wEbuFiFGKBNsSHMV3UQoEyFGKBMhRigT3UQoE2xIcxUhRigTIUYoE2xIcxXdRCgTIUYoEw=="),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEAAAACAAQAAAAFAAMAAAAEAAYAAAAHAAUAAAAGAAgAAAAJAAcAAAAIAAoAAAALAAkAAAAKAAwAAAAMAAsA"),
"material": SubResource("StandardMaterial3D_yx4l1"),
"name": "MI_Decal_Red",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 13,
"vertex_data": PackedByteArray("/38AAAS1CDmknQAAAAAlt2XNAABiXXMv/38AAAAAAAD//wAABcS3LlpiAAAAAKgGLPEAAI/hEy+BMAAAkGE01FriAAAa/47mAAAAAAXEVNf/fwAA//8mL9IOAACP4RMvpB0AABr/0Csqw2memvZdmO3jUjT/f2C5CeaeORo2bwWo4os+VMx2GlubEbuSyGwY4Mqonou+Vp3lw3Gf")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_jjuvg")

[sub_resource type="Gradient" id="Gradient_xdasg"]
offsets = PackedFloat32Array(0.109756, 0.662602, 1)
colors = PackedColorArray(1, 0, 0, 0, 1, 0, 0, 0.695122, 1, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u3700"]
gradient = SubResource("Gradient_xdasg")
fill_to = Vector2(0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gy1tt"]
transparency = 1
albedo_texture = SubResource("GradientTexture2D_u3700")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6prry"]
render_priority = 0
shader = ExtResource("3_k5cr0")
shader_parameter/decals_color = Color(1, 0, 0, 1)
shader_parameter/decals_texture = ExtResource("4_jg3mo")

[node name="Core" type="Node3D"]
script = ExtResource("1_i5cd7")

[node name="NucleusHolder" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, -0.5, 0, 0, 0)
mesh = SubResource("ArrayMesh_ety4p")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_gy1tt")
surface_material_override/1 = ExtResource("2_nah87")
surface_material_override/2 = SubResource("ShaderMaterial_6prry")

[node name="NucleusCenterPoint" type="OmniLight3D" parent="NucleusHolder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
light_color = Color(0, 0, 1, 1)
light_bake_mode = 1
omni_attenuation = 0.5

[node name="IsotopeTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="IsotopeAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_k5cr0")
unit_size = 2.0

[connection signal="timeout" from="IsotopeTimer" to="." method="_on_isotope_timer_timeout"]
